adjusted column width and other styles. Fixed overlap issue. Now need to get layout in multiple columns.

--- a/frontend/outfitcreator/src/Components/Archive_Page/OutfitCard.css
+++ b/frontend/outfitcreator/src/Components/Archive_Page/OutfitCard.css
@@ -15,6 +15,7 @@
 
 .card--header {
     color: var(--dark-purple);
+    font-weight: bold;
     display: flex;
     justify-content: space-between;
 }
